CHANGES
=======

* Run docker container with image qommunicator
* Add paramter file
* Generate qsub files
* FIX tox's issues
* Add API skeleton
* Add version handling with pbr
* Add static code analysis and tox
* very first commit